cmake_minimum_required(VERSION 3.4)
project(main)
set(CMAKE_CXX_STANDARD 11)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

add_subdirectory(formatter_lib)
add_subdirectory(formatter_ex_lib)
add_subdirectory(solver_lib)
add_subdirectory(hello_world_application)
add_subdirectory(solver_application)

include(CPack)
set(CPACK_GENERATOR "TGZ ZIP RPM DEB MSI DMG")
set(CPACK_PACKAGE_NAME "solver")
set(CPACK_PACKAGE_VERSION "1.0")
set(CPACK_GENERATOR "TGZ ZIP RPM DEB MSI DMG")
